Fixed some lingering issues Cmdk container too short Code Block breaking site with unrecognized lang Added border-focusable, updated light mode styles

--- a/apps/site-astro/src/styles/global.css
+++ b/apps/site-astro/src/styles/global.css
@@ -272,4 +272,8 @@
   .text-balance {
     text-wrap: balance;
   }
+
+  .border-focusable {
+    @apply rounded-[0.5rem] border border-slate-600 text-muted-foreground ring-offset-background transition-colors hover:bg-accent/10 hover:text-gray-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 dark:hover:bg-accent dark:hover:text-accent-foreground;
+  }
 }
